--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mytreasury",
+  "name": "tresorerie",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@supabase/supabase-js": "^2.45.0",
     "@tanstack/react-query": "^5.59.0",
     "expo": "~50.0.0",
